# package-assistant

./: Cargo.toml  LICENSE  README.md  deny.toml  dist-workspace.toml
.github/: FUNDING.yml
.github/workflows/: audit.yml  release.yml
src/: cli.rs  config.rs  lib.rs  main.rs
src/managers/: apk.rs  apt.rs  cargo.rs  dnf.rs  flatpak.rs  homebrew.rs  mod.rs  nix_env.rs  pacman.rs  paru.rs  pkg.rs  snap.rs  yay.rs
