[package]
name = "package-assistant"
version = "1.0.0"
authors = ["Patryk Sidzina <patryk.sidzina+pa@gmail.com>"]
description = "Package Assistant helps you manage your package managers."
homepage = "https://github.com/patryk-s/package-assistant"
repository = "https://github.com/patryk-s/package-assistant"
categories = ["command-line-utilities"]
keywords = ["package-manager", "cli"]
license = "MIT"
readme = "README.md"
exclude = ["/.github/"]
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[[bin]]
name = "pa"
path = "src/main.rs"

[profile.release]
lto = "fat"
strip = true

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.20", features = ["derive"] }
confy = "0.6.1"
directories = "6.0.0"
inquire = "0.7.5"
serde = { version = "1.0.219", features = ["derive"] }
